--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.2.0",
 	"appid": "wx925700abef8ddd21",
-	"projectname": "%E6%89%BE%E8%8C%B6",
+	"projectname": "%E6%89%BE%E6%89%BE%E8%8C%B6",
 	"condition": {
 		"search": {
 			"current": -1,
